--- a/package.json
+++ b/package.json
@@ -13,5 +13,9 @@
     "serve-favicon": "~2.1.3",
     "debug": "~2.0.0",
     "express-hbs" : "*"
+  },
+  "devDependencies" : {
+    "gulp" : "~3.8.10",
+    "gulp-browserify" : "~0.5.1"
   }
 }
