--- a/package.json
+++ b/package.json
@@ -12,7 +12,10 @@
     "morgan": "~1.3.0",
     "serve-favicon": "~2.1.3",
     "debug": "~2.0.0",
-    "express-hbs" : "*"
+    "express-hbs" : "*",
+    "passport" : "*",
+    "passport-local" : "*",
+    "mongoose" : "*"
   },
   "devDependencies" : {
     "gulp" : "~3.8.10",
