--- a/package.json
+++ b/package.json
@@ -7,18 +7,19 @@
   },
   "dependencies": {
     "express": "~4.9.0",
+    "express-session": "*",
     "body-parser": "~1.8.1",
     "cookie-parser": "~1.3.3",
     "morgan": "~1.3.0",
     "serve-favicon": "~2.1.3",
     "debug": "~2.0.0",
-    "express-hbs" : "*",
-    "passport" : "*",
-    "passport-local" : "*",
-    "mongoose" : "*"
+    "express-hbs": "*",
+    "passport": "*",
+    "passport-local": "*",
+    "mongoose": "*",
+    "bcrypt-nodejs": "0.0.3",
+    "connect": "~2.29.0",
+    "session-mongoose": "~0.5.2"
   },
-  "devDependencies" : {
-    "gulp" : "~3.8.10",
-    "gulp-browserify" : "~0.5.1"
-  }
+  "devDependencies": {}
 }
