--- a/package.json
+++ b/package.json
@@ -6,16 +6,30 @@
     "start": "node ./bin/www"
   },
   "dependencies": {
+
     "express": "~4.9.0",
     "body-parser": "~1.8.1",
     "cookie-parser": "~1.3.3",
     "morgan": "~1.3.0",
     "serve-favicon": "~2.1.3",
     "debug": "~2.0.0",
-    "express-hbs" : "*"
+    "express-hbs": "*",
+    
+    "gulp-rename": "~1.2.2",
+    "gulp-uglify": "~1.2.0",
+    "vinyl-source-stream": "~1.1.0",
+    "vinyl-buffer": "~1.0.0",
+    "gulp-sourcemaps": "~1.5.1",
+    "gulp-util": "~3.0.4",
+    "browserify": "~9.0.8",
+    "gulp-minify-css": "~1.0.0",
+    "gulp-concat": "~2.5.2",
+    
+    "lens-starter": "git+https://github.com/CAYdenberg/lens-starter.git#master"
+
   },
-  "devDependencies" : {
-    "gulp" : "~3.8.10",
-    "gulp-browserify" : "~0.5.1"
+  "devDependencies": {
+    "gulp": "~3.8.10",
+    "gulp-browserify": "~0.5.1"
   }
 }
