--- a/package.json
+++ b/package.json
@@ -6,7 +6,6 @@
     "start": "node ./bin/www"
   },
   "dependencies": {
-
     "express": "~4.9.0",
     "body-parser": "~1.8.1",
     "cookie-parser": "~1.3.3",
@@ -14,7 +13,6 @@
     "serve-favicon": "~2.1.3",
     "debug": "~2.0.0",
     "express-hbs": "*",
-    
     "gulp-rename": "~1.2.2",
     "gulp-uglify": "~1.2.0",
     "vinyl-source-stream": "~1.1.0",
@@ -23,10 +21,7 @@
     "gulp-util": "~3.0.4",
     "browserify": "~9.0.8",
     "gulp-minify-css": "~1.0.0",
-    "gulp-concat": "~2.5.2",
-    
-    "lens-starter": "git+https://github.com/CAYdenberg/lens-starter.git#master"
-
+    "gulp-concat": "~2.5.2"
   },
   "devDependencies": {
     "gulp": "~3.8.10",
