--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "gulp-util": "~3.0.4",
     "browserify": "~9.0.8",
     "gulp-minify-css": "~1.0.0",
-    "gulp-concat": "~2.5.2"
+    "gulp-concat": "~2.5.2",
+    "gulp-less-sourcemap": "~1.4.2"
   },
   "devDependencies": {
     "gulp": "~3.8.10",
