--- a/package.json
+++ b/package.json
@@ -9,13 +9,14 @@
     "bcrypt-nodejs": "0.0.3",
     "body-parser": "~1.8.1",
     "browserify": "~9.0.8",
-    "cookie-parser": "~1.3.3",
     "connect": "~2.29.0",
+    "cookie-parser": "~1.3.3",
     "debug": "~2.0.0",
     "event-emitter": "~0.3.3",
     "express": "~4.9.0",
-    "express-hbs": "*",
-    "express-session": "*",
+    "express-hbs": "^0.8.4",
+    "express-session": "^1.11.3",
+    "gulp": "^3.9.0",
     "gulp-browserify": "~0.5.1",
     "gulp-concat": "~2.5.2",
     "gulp-less-sourcemap": "~1.4.2",
@@ -24,17 +25,16 @@
     "gulp-sourcemaps": "~1.5.1",
     "gulp-uglify": "~1.2.0",
     "gulp-util": "~3.0.4",
+    "mongoose": "^4.0.6",
     "morgan": "~1.3.0",
-    "mongoose": "*",
-    "passport": "*",
-    "passport-local": "*",
+    "passport": "^0.2.2",
+    "passport-local": "^1.0.0",
     "popsicle": "^0.5.12",
     "serve-favicon": "~2.1.3",
     "session-mongoose": "~0.5.2"
   },
   "devDependencies": {
     "browser-sync": "^2.7.13",
-    "gulp": "^3.9.0",
     "gulp-mocha": "^2.1.2",
     "gulp-nodemon": "^2.0.3",
     "mocha": "^2.2.5"
