--- a/package.json
+++ b/package.json
@@ -30,11 +30,14 @@
     "passport": "^0.2.2",
     "passport-local": "^1.0.0",
     "popsicle": "^0.5.12",
+    "react": "^0.13.3",
+    "reactify": "^1.1.1",
     "serve-favicon": "~2.1.3",
     "session-mongoose": "~0.5.2",
     "underscore": "^1.8.3",
     "vinyl-buffer": "^1.0.0",
-    "vinyl-source-stream": "^1.1.0"
+    "vinyl-source-stream": "^1.1.0",
+    "xml2js": "^0.4.9"
   },
   "devDependencies": {
     "browser-sync": "^2.7.13",
