--- a/package.json
+++ b/package.json
@@ -12,10 +12,11 @@
     "connect": "~2.29.0",
     "cookie-parser": "~1.3.3",
     "debug": "~2.0.0",
-    "event-emitter": "~0.3.3",
+    "event-emitter": "^0.3.3",
     "express": "~4.9.0",
     "express-hbs": "^0.8.4",
     "express-session": "^1.11.3",
+    "flux": "^2.0.3",
     "gulp": "^3.9.0",
     "gulp-browserify": "~0.5.1",
     "gulp-concat": "~2.5.2",
