--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "react": "^0.13.3",
     "reactify": "^1.1.1",
     "serve-favicon": "~2.1.3",
+    "slug": "^0.9.1",
     "underscore": "^1.8.3",
     "vinyl-buffer": "^1.0.0",
     "vinyl-source-stream": "^1.1.0",
