--- a/package.json
+++ b/package.json
@@ -39,9 +39,7 @@
     "underscore": "^1.8.3",
     "vinyl-buffer": "^1.0.0",
     "vinyl-source-stream": "^1.1.0",
-    "xml2js": "^0.4.9"
-  },
-  "devDependencies": {
+    "xml2js": "^0.4.9",
     "browser-sync": "^2.7.13",
     "gulp-mocha": "^2.1.2",
     "gulp-nodemon": "^2.0.3",
