--- a/bower.json
+++ b/bower.json
@@ -1,7 +1,7 @@
 {
   "name": "monacle",
-  "version": "0.0.0",
-  "homepage": "https://github.com/CAYdenberg/monacle",
+  "version": "0.0.1",
+  "homepage": "https://github.com/CAYdenberg/monocle",
   "authors": [
     "Casey Ydenberg <ydenberg@gmail.com>"
   ],
@@ -22,7 +22,7 @@
     "tests"
   ],
   "dependencies": {
-    "bootswatch": "~3.3.5+1",
+    "bootswatch": "~3.3.5",
     "bootstrap": "~3.3.5",
     "jasny-bootstrap": "~3.1.3"
   }
