--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "dependencies": {
     "bcrypt-nodejs": "0.0.3",
     "body-parser": "~1.8.1",
+    "browser-sync": "^2.7.13",
     "browserify": "~9.0.8",
     "connect": "~2.29.0",
     "cookie-parser": "~1.3.3",
@@ -22,10 +23,13 @@
     "gulp-concat": "~2.5.2",
     "gulp-less-sourcemap": "~1.4.2",
     "gulp-minify-css": "~1.0.0",
+    "gulp-mocha": "^2.1.2",
+    "gulp-nodemon": "^2.0.3",
     "gulp-rename": "~1.2.2",
     "gulp-sourcemaps": "~1.5.1",
     "gulp-uglify": "~1.2.0",
     "gulp-util": "~3.0.4",
+    "mocha": "^2.2.5",
     "mongodb": "^2.0.40",
     "monk": "^1.0.1",
     "morgan": "~1.3.0",
@@ -39,10 +43,6 @@
     "underscore": "^1.8.3",
     "vinyl-buffer": "^1.0.0",
     "vinyl-source-stream": "^1.1.0",
-    "xml2js": "^0.4.9",
-    "browser-sync": "^2.7.13",
-    "gulp-mocha": "^2.1.2",
-    "gulp-nodemon": "^2.0.3",
-    "mocha": "^2.2.5"
+    "xml2js": "^0.4.9"
   }
 }
