--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "serve-favicon": "~2.1.3",
     "slug": "^0.9.1",
     "underscore": "^1.8.3",
+    "validate-email": "^1.0.0",
     "vinyl-buffer": "^1.0.0",
     "vinyl-source-stream": "^1.1.0",
     "xml2js": "^0.4.9"
