--- a/package.json
+++ b/package.json
@@ -18,18 +18,15 @@
     "express-hbs": "^0.8.4",
     "express-session": "^1.11.3",
     "flux": "^2.0.3",
-    "gulp": "^3.9.0",
     "gulp-browserify": "~0.5.1",
     "gulp-concat": "~2.5.2",
     "gulp-less-sourcemap": "~1.4.2",
     "gulp-minify-css": "~1.0.0",
-    "gulp-mocha": "^2.1.2",
     "gulp-nodemon": "^2.0.3",
     "gulp-rename": "~1.2.2",
     "gulp-sourcemaps": "~1.5.1",
     "gulp-uglify": "~1.2.0",
     "gulp-util": "~3.0.4",
-    "mocha": "^2.2.5",
     "mongodb": "^2.0.40",
     "monk": "^1.0.1",
     "morgan": "~1.3.0",
@@ -40,10 +37,8 @@
     "reactify": "^1.1.1",
     "serve-favicon": "~2.1.3",
     "slug": "^0.9.1",
-    "underscore": "^1.8.3",
     "validate-email": "^1.0.0",
     "vinyl-buffer": "^1.0.0",
-    "vinyl-source-stream": "^1.1.0",
-    "xml2js": "^0.4.9"
+    "vinyl-source-stream": "^1.1.0"
   }
 }
