--- a/bower.json
+++ b/bower.json
@@ -24,6 +24,7 @@
   "dependencies": {
     "bootswatch": "~3.3.5",
     "bootstrap": "~3.3.5",
-    "jasny-bootstrap": "~3.1.3"
+    "jasny-bootstrap": "~3.1.3",
+    "lens-starter": "https://github.com/CAYdenberg/lens-starter.git#master"
   }
 }
