--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "express-hbs": "^0.8.4",
     "express-session": "^1.11.3",
     "flux": "^2.0.3",
+    "gulp": "^3.9.0",
     "gulp-browserify": "~0.5.1",
     "gulp-concat": "~2.5.2",
     "gulp-less-sourcemap": "~1.4.2",
@@ -34,10 +35,11 @@
     "passport": "^0.2.2",
     "passport-local": "^1.0.0",
     "popsicle": "^0.5.12",
-    "react": "^0.13.3",
+    "react": "^0.14.3",
     "reactify": "^1.1.1",
     "serve-favicon": "~2.1.3",
     "slug": "^0.9.1",
+    "underscore": "^1.8.3",
     "validate-email": "^1.0.0",
     "vinyl-buffer": "^1.0.0",
     "vinyl-source-stream": "^1.1.0"
