--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "mongodb": "^2.0.40",
     "monk": "^1.0.1",
     "morgan": "~1.3.0",
+    "mpromise": "^0.5.5",
     "node-ncbi": "0.0.3",
     "passport": "^0.2.2",
     "passport-local": "^1.0.0",
