--- a/package.json
+++ b/package.json
@@ -6,39 +6,39 @@
     "start": "node ./bin/www"
   },
   "dependencies": {
-    "bcrypt-nodejs": "0.0.3",
-    "body-parser": "~1.8.1",
+    "bcrypt-nodejs": "^0.0.3",
+    "body-parser": "^1.8.1",
     "browser-sync": "^2.7.13",
-    "browserify": "~9.0.8",
-    "connect": "~2.29.0",
-    "cookie-parser": "~1.3.3",
-    "debug": "~2.0.0",
+    "browserify": "^9.0.8",
+    "connect": "^2.29.0",
+    "cookie-parser": "^1.3.3",
+    "debug": "^2.0.0",
     "event-emitter": "^0.3.3",
-    "express": "~4.9.0",
+    "express": "^4.9.0",
     "express-hbs": "^0.8.4",
     "express-session": "^1.11.3",
     "flux": "^2.0.3",
     "gulp": "^3.9.0",
-    "gulp-browserify": "~0.5.1",
-    "gulp-concat": "~2.5.2",
-    "gulp-less-sourcemap": "~1.4.2",
-    "gulp-minify-css": "~1.0.0",
+    "gulp-browserify": "^0.5.1",
+    "gulp-concat": "^2.5.2",
+    "gulp-less-sourcemap": "^1.4.2",
+    "gulp-minify-css": "^1.0.0",
     "gulp-nodemon": "^2.0.3",
-    "gulp-rename": "~1.2.2",
-    "gulp-sourcemaps": "~1.5.1",
-    "gulp-uglify": "~1.2.0",
-    "gulp-util": "~3.0.4",
+    "gulp-rename": "^1.2.2",
+    "gulp-sourcemaps": "^1.5.1",
+    "gulp-uglify": "^1.2.0",
+    "gulp-util": "^3.0.4",
     "mongodb": "^2.0.40",
     "monk": "^1.0.1",
-    "morgan": "~1.3.0",
+    "morgan": "^1.3.0",
     "mpromise": "^0.5.5",
-    "node-ncbi": "0.0.4",
+    "node-ncbi": "^0.0.4",
     "passport": "^0.2.2",
     "passport-local": "^1.0.0",
     "popsicle": "^0.5.12",
     "react": "^0.14.3",
     "reactify": "^1.1.1",
-    "serve-favicon": "~2.1.3",
+    "serve-favicon": "^2.1.3",
     "slug": "^0.9.1",
     "underscore": "^1.8.3",
     "validate-email": "^1.0.0",
