Fixed console errors

--- a/.eslintrc
+++ b/.eslintrc
@@ -20,6 +20,7 @@
   },
   "extends": "eslint:recommended",
   "rules": {
-    "no-console": 0
+    "no-console": 0,
+    "no-unused-vars": [2, { "varsIgnorePattern" : "React" }]
   }
 }
