--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "gulp-sourcemaps": "~1.5.1",
     "gulp-uglify": "~1.2.0",
     "gulp-util": "~3.0.4",
-    "mongodb": "^2.0.40",
+    "mongodb": "^2.1.0",
     "monk": "^1.0.1",
     "morgan": "~1.3.0",
     "mpromise": "^0.5.5",
@@ -36,7 +36,8 @@
     "passport": "^0.2.2",
     "passport-local": "^1.0.0",
     "popsicle": "^0.5.12",
-    "react": "^0.14.3",
+    "react": "^0.14.6",
+    "react-dom": "^0.14.6",
     "reactify": "^1.1.1",
     "serve-favicon": "~2.1.3",
     "slug": "^0.9.1",
