--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
   "dependencies": {
     "bcrypt-nodejs": "^0.0.3",
     "body-parser": "^1.8.1",
+    "bootstrap": "^3.3.6",
+    "bootswatch": "^3.3.6",
     "browser-sync": "^2.7.13",
     "browserify": "^9.0.8",
     "connect": "^2.29.0",
@@ -28,6 +30,8 @@
     "gulp-sourcemaps": "^1.5.1",
     "gulp-uglify": "^1.2.0",
     "gulp-util": "^3.0.4",
+    "jasny-bootstrap": "^3.1.3",
+    "lens-starter": "git+https://github.com/CAYdenberg/lens-starter.git#master",
     "mongodb": "^2.1.0",
     "monk": "^1.0.1",
     "morgan": "^1.3.0",
