--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "start": "node ./bin/www"
   },
   "dependencies": {
+    "babelify": "^7.2.0",
     "bcrypt-nodejs": "^0.0.3",
     "body-parser": "^1.8.1",
     "bootstrap": "^3.3.6",
@@ -51,6 +52,8 @@
     "vinyl-source-stream": "^1.1.0"
   },
   "devDependencies": {
+    "babel-preset-es2015": "^6.6.0",
+    "babel-preset-react": "^6.5.0",
     "eslint": "^1.10.3",
     "eslint-plugin-react": "^3.12.0",
     "gulp-eslint": "^1.1.1",
