--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "monk": "^1.0.1",
     "morgan": "^1.3.0",
     "mpromise": "^0.5.5",
+    "node-jsx": "^0.13.3",
     "node-ncbi": "git+http://CAYdenberg@github.com/CAYdenberg/node-ncbi.git#0.1",
     "passport": "^0.2.2",
     "passport-local": "^1.0.0",
