--- a/.eslintrc
+++ b/.eslintrc
@@ -5,17 +5,12 @@
   "ecmaFeatures": {
     "jsx": true
   },
+  "sourceType": "module",
   "env": {
-    "browser": true,
-    "node": true
+    "es6": true,
+    "commonjs": true
   },
   "globals": {
-    "jQuery": false,
-    "$": true,
-    "describe": true,
-    "before": true,
-    "it": true,
-    "beforeAll": true,
     "globals": true
   },
   "extends": "eslint:recommended",
