--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "connect": "^2.29.0",
     "cookie-parser": "^1.3.3",
     "debug": "^2.0.0",
+    "dotenv": "^2.0.0",
     "event-emitter": "^0.3.3",
     "express": "^4.9.0",
     "express-hbs": "^0.8.4",
