--- a/.eslintrc
+++ b/.eslintrc
@@ -8,7 +8,9 @@
   "sourceType": "module",
   "env": {
     "es6": true,
-    "commonjs": true
+    "commonjs": true,
+    "node": true,
+    "browser": true
   },
   "globals": {
     "globals": true
@@ -16,6 +18,7 @@
   "extends": "eslint:recommended",
   "rules": {
     "no-console": 0,
-    "no-unused-vars": [2, { "varsIgnorePattern" : "React" }]
+    "no-unused-vars": [2, { "varsIgnorePattern" : "React" }],
+    "prefer-const": [1]
   }
 }
