--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "gulp-uglify": "^1.2.0",
     "gulp-util": "^3.0.4",
     "jasny-bootstrap": "^3.1.3",
+    "jquery": "^2.2.3",
     "lens-starter": "git+https://github.com/CAYdenberg/lens-starter.git#master",
     "mongodb": "^2.1.0",
     "monk": "^1.0.1",
