--- a/.eslintrc
+++ b/.eslintrc
@@ -5,22 +5,20 @@
   "ecmaFeatures": {
     "jsx": true
   },
+  "sourceType": "module",
   "env": {
-    "browser": true,
-    "node": true
+    "es6": true,
+    "commonjs": true,
+    "node": true,
+    "browser": true
   },
   "globals": {
-    "jQuery": false,
-    "$": true,
-    "describe": true,
-    "before": true,
-    "it": true,
-    "beforeAll": true,
     "globals": true
   },
   "extends": "eslint:recommended",
   "rules": {
     "no-console": 0,
-    "no-unused-vars": [2, { "varsIgnorePattern" : "React" }]
+    "no-unused-vars": [2, { "varsIgnorePattern" : "React" }],
+    "prefer-const": [1]
   }
 }
