--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
   "devDependencies": {
     "babel-preset-es2015": "^6.6.0",
     "babel-preset-react": "^6.5.0",
+    "browserify-bypass": "^0.1.0",
     "eslint": "^1.10.3",
     "eslint-plugin-react": "^3.12.0",
     "gulp-eslint": "^1.1.1",
