--- a/package.json
+++ b/package.json
@@ -6,58 +6,26 @@
     "start": "node ./bin/www"
   },
   "dependencies": {
-    "babelify": "^7.2.0",
-    "bcrypt-nodejs": "^0.0.3",
     "body-parser": "^1.8.1",
-    "bootstrap": "^3.3.6",
-    "bootswatch": "^3.3.6",
-    "browser-sync": "^2.7.13",
-    "browserify": "^9.0.8",
     "connect": "^2.29.0",
     "cookie-parser": "^1.3.3",
     "debug": "^2.0.0",
-    "event-emitter": "^0.3.3",
+    "dotenv": "^2.0.0",
     "express": "^4.9.0",
     "express-hbs": "^0.8.4",
-    "express-session": "^1.11.3",
-    "flux": "^2.0.3",
     "gulp": "^3.9.0",
-    "gulp-browserify": "^0.5.1",
-    "gulp-concat": "^2.5.2",
-    "gulp-less-sourcemap": "^1.4.2",
-    "gulp-minify-css": "^1.0.0",
     "gulp-nodemon": "^2.0.3",
     "gulp-rename": "^1.2.2",
-    "gulp-sourcemaps": "^1.5.1",
-    "gulp-uglify": "^1.2.0",
     "gulp-util": "^3.0.4",
-    "jasny-bootstrap": "^3.1.3",
-    "jquery": "^2.2.3",
     "lens-starter": "git+https://github.com/CAYdenberg/lens-starter.git#master",
-    "mongodb": "^2.1.0",
-    "monk": "^1.0.1",
-    "morgan": "^1.3.0",
-    "mpromise": "^0.5.5",
+    "morgan": "^1.7.0",
     "node-ncbi": "git+https://github.com/CAYdenberg/node-ncbi.git#master",
-    "passport": "^0.2.2",
-    "passport-local": "^1.0.0",
-    "popsicle": "^0.5.12",
-    "react": "^0.14.6",
-    "react-dom": "^0.14.6",
-    "reactify": "^1.1.1",
-    "serve-favicon": "^2.1.3",
-    "slug": "^0.9.1",
-    "underscore": "^1.8.3",
-    "validate-email": "^1.0.0",
-    "vinyl-buffer": "^1.0.0",
-    "vinyl-source-stream": "^1.1.0"
+    "serve-favicon": "^2.1.3"
   },
   "devDependencies": {
     "babel-preset-es2015": "^6.6.0",
-    "babel-preset-react": "^6.5.0",
-    "browserify-bypass": "^0.1.0",
+    "browser-sync": "^2.12.8",
     "eslint": "^1.10.3",
-    "eslint-plugin-react": "^3.12.0",
     "gulp-eslint": "^1.1.1",
     "gulp-mocha": "^2.2.0",
     "supertest": "^1.1.0"
