--- a/.eslintrc
+++ b/.eslintrc
@@ -3,8 +3,8 @@
     "jsx": true
   },
   "env": {
-    "browser": true,
-    "node": true
+    "es6": true,
+    "commonjs": true
   },
   "globals": {
     "globals": true
