--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   "devDependencies": {
     "babel-preset-es2015": "^6.6.0",
     "browser-sync": "^2.12.8",
+    "check-types": "^7.0.0",
     "eslint": "^1.10.3",
     "gulp-eslint": "^1.1.1",
     "gulp-mocha": "^2.2.0",
