--- a/.eslintrc
+++ b/.eslintrc
@@ -4,7 +4,8 @@
   },
   "env": {
     "es6": true,
-    "commonjs": true
+    "commonjs": true,
+    "node": true
   },
   "globals": {
     "globals": true
