--- a/package.json
+++ b/package.json
@@ -13,9 +13,12 @@
     "dotenv": "^2.0.0",
     "express": "^4.9.0",
     "express-hbs": "^0.8.4",
+    "foundation-sites": "^6.2.1",
     "gulp": "^3.9.0",
+    "gulp-minify-css": "^1.2.4",
     "gulp-nodemon": "^2.0.3",
     "gulp-rename": "^1.2.2",
+    "gulp-sass": "^2.3.1",
     "gulp-util": "^3.0.4",
     "lens-starter": "git+https://github.com/CAYdenberg/lens-starter.git#master",
     "morgan": "^1.7.0",
