--- a/package.json
+++ b/package.json
@@ -6,9 +6,13 @@
     "start": "node ./bin/www"
   },
   "dependencies": {
+    "babel-preset-es2015": "^6.16.0",
+    "babel-preset-react": "^6.16.0",
+    "babelify": "^7.3.0",
     "body-parser": "^1.8.1",
     "bootstrap": "^3.3.7",
     "bootswatch": "^3.3.7",
+    "browserify": "^13.1.0",
     "connect": "^2.29.0",
     "cookie-parser": "^1.3.3",
     "debug": "^2.0.0",
@@ -20,6 +24,7 @@
     "gulp-minify-css": "^1.2.4",
     "gulp-nodemon": "^2.0.3",
     "gulp-rename": "^1.2.2",
+    "gulp-uglify": "^2.0.0",
     "gulp-util": "^3.0.4",
     "jasny-bootstrap": "^3.1.3",
     "lens-starter": "git+https://github.com/CAYdenberg/lens-starter.git#master",
@@ -27,7 +32,9 @@
     "node-ncbi": "git+https://github.com/CAYdenberg/node-ncbi.git#master",
     "react": "^15.3.2",
     "react-addons-update": "^15.3.2",
-    "serve-favicon": "^2.1.3"
+    "serve-favicon": "^2.1.3",
+    "vinyl-buffer": "^1.0.0",
+    "vinyl-source-stream": "^1.1.0"
   },
   "devDependencies": {
     "babel-preset-es2015": "^6.6.0",
