Fixes linter to work with React properly

--- a/.eslintrc
+++ b/.eslintrc
@@ -1,18 +1,31 @@
 {
-  "ecmaFeatures": {
-    "jsx": true
+  "plugins": ["react"],
+  "settings": {
+    "react": {
+      "pragma": "React",
+      "version": "15.1.0"
+    }
+  },
+  "parserOptions": {
+    "ecmaFeatures": {
+      "jsx": true
+    }
   },
   "env": {
     "es6": true,
     "commonjs": true,
-    "node": true
+    "node": true,
+    "browser": true
   },
   "globals": {
-    "globals": true
+    "globals": true,
+    "React": true
   },
-  "extends": "eslint:recommended",
+  "extends": ["eslint:recommended"],
   "rules": {
-    "no-console": 0,
-    "no-unused-vars": [2, { "varsIgnorePattern" : "React" }]
+    "no-console": 1,
+    "no-case-declarations": 0,
+    "no-unused-vars": [2, { "varsIgnorePattern" : "React" }],
+    "react/jsx-uses-vars": 1
   }
 }
