--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "node-ncbi": "git+https://github.com/CAYdenberg/node-ncbi.git#master",
     "react": "^15.3.2",
     "react-addons-update": "^15.3.2",
+    "react-dom": "^15.3.2",
     "redux": "^3.6.0",
     "redux-thunk": "^2.1.0",
     "serve-favicon": "^2.1.3",
@@ -43,8 +44,9 @@
     "babel-preset-es2015": "^6.6.0",
     "browser-sync": "^2.12.8",
     "check-types": "^7.0.0",
-    "eslint": "^1.10.3",
-    "gulp-eslint": "^1.1.1",
+    "eslint": "^3.7.1",
+    "eslint-plugin-react": "^6.4.1",
+    "gulp-eslint": "^3.0.1",
     "gulp-mocha": "^2.2.0",
     "supertest": "^1.1.0"
   }
