--- a/package.json
+++ b/package.json
@@ -31,12 +31,14 @@
     "lens-starter": "git+https://github.com/CAYdenberg/lens-starter.git#master",
     "morgan": "^1.7.0",
     "node-ncbi": "git+https://github.com/CAYdenberg/node-ncbi.git#master",
+    "popsicle": "^8.2.0",
     "react": "^15.3.2",
     "react-addons-update": "^15.3.2",
     "react-dom": "^15.3.2",
     "redux": "^3.6.0",
     "redux-thunk": "^2.1.0",
     "serve-favicon": "^2.1.3",
+    "underscore": "^1.8.3",
     "vinyl-buffer": "^1.0.0",
     "vinyl-source-stream": "^1.1.0"
   },
