--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "express": "^4.9.0",
     "express-hbs": "^0.8.4",
     "gulp": "^3.9.0",
+    "gulp-concat": "^2.6.0",
     "gulp-less": "^3.1.0",
     "gulp-minify-css": "^1.2.4",
     "gulp-nodemon": "^2.0.3",
