--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "monocle",
-  "version": "0.2.0",
+  "version": "0.4.0",
   "private": true,
   "scripts": {
     "start": "node ./bin/www",
@@ -29,9 +29,9 @@
     "gulp-uglify": "^2.0.0",
     "gulp-util": "^3.0.4",
     "jasny-bootstrap": "^3.1.3",
-    "lens-starter": "git+https://github.com/CAYdenberg/lens-starter.git#master",
+    "lens-starter": "git+https://github.com/CAYdenberg/lens-starter.git#monocle",
     "morgan": "^1.7.0",
-    "node-ncbi": "git+https://github.com/CAYdenberg/node-ncbi.git#master",
+    "node-ncbi": "^0.4.0",
     "popsicle": "^8.2.0",
     "react": "^15.3.2",
     "react-addons-update": "^15.3.2",
