--- a/package.json
+++ b/package.json
@@ -28,14 +28,14 @@
     "gulp-rename": "^1.2.2",
     "gulp-uglify": "^2.0.0",
     "gulp-util": "^3.0.4",
+    "immutability-helper": "^2.6.4",
     "jasny-bootstrap": "^3.1.3",
     "lens-starter": "git+https://github.com/CAYdenberg/lens-starter.git#monocle",
     "morgan": "^1.7.0",
     "node-ncbi": "^0.5.1",
     "popsicle": "^8.2.0",
-    "react": "^15.3.2",
-    "react-addons-update": "^15.3.2",
-    "react-dom": "^15.3.2",
+    "react": "^16.2.0",
+    "react-dom": "^16.2.0",
     "redux": "^3.6.0",
     "redux-thunk": "^2.1.0",
     "serve-favicon": "^2.1.3",
