--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "private": true,
   "scripts": {
     "start": "node ./bin/www",
-    "stop": "kill $(ps aux | grep 'node bin/www' | awk '{print $2}')"
+    "stop": "kill $(ps aux | grep 'node bin/www' | awk '{print $2}')",
+    "test": "./node_modules/.bin/jest --watch"
   },
   "dependencies": {
     "babel-preset-es2015": "^6.16.0",
@@ -37,6 +38,7 @@
     "prop-types": "^15.6.0",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
+    "react-redux": "^5.0.6",
     "redux": "^3.6.0",
     "redux-thunk": "^2.1.0",
     "serve-favicon": "^2.1.3",
@@ -51,6 +53,7 @@
     "eslint-plugin-react": "^6.4.1",
     "gulp-eslint": "^3.0.1",
     "gulp-mocha": "^2.2.0",
+    "jest": "^22.1.4",
     "supertest": "^1.1.0"
   }
 }
