--- a/.eslintrc
+++ b/.eslintrc
@@ -26,6 +26,8 @@
     "no-console": 1,
     "no-case-declarations": 0,
     "no-unused-vars": [2, { "varsIgnorePattern" : "React" }],
-    "react/jsx-uses-vars": 1
+    "semi": [2, "never"],
+    "comma-dangle": [2, "always-multiline"],
+    "react/jsx-uses-vars": 1,
   }
 }
