--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "test": "./node_modules/.bin/jest --watch"
   },
   "dependencies": {
-    "babel-preset-es2015": "^6.16.0",
+    "babel-preset-es2016": "^6.24.1",
     "babel-preset-react": "^6.16.0",
     "babelify": "^7.3.0",
     "body-parser": "^1.8.1",
@@ -40,6 +40,7 @@
     "react-dom": "^16.2.0",
     "react-redux": "^5.0.6",
     "redux": "^3.6.0",
+    "redux-saga": "^0.16.0",
     "redux-thunk": "^2.1.0",
     "serve-favicon": "^2.1.3",
     "vinyl-buffer": "^1.0.0",
