--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "cookie-parser": "^1.3.3",
     "debug": "^2.0.0",
     "dotenv": "^2.0.0",
+    "envify": "^4.1.0",
     "express": "^4.9.0",
     "express-hbs": "^0.8.4",
     "gulp": "^3.9.0",
@@ -52,6 +53,7 @@
     "browser-sync": "^2.12.8",
     "check-types": "^7.0.0",
     "eslint": "^3.7.1",
+    "eslint-config-recommended": "^3.0.0",
     "eslint-plugin-react": "^6.4.1",
     "gulp-eslint": "^3.0.1",
     "gulp-mocha": "^2.2.0",
